# bobathon

./: .env.example  .gitignore  AGENTS.MD  CLAUDE.MD  DATASET_README.md  README.md  RUNNING_EXTRACTION_SERVICE.md  SETUP.md  SOURCES.md  docker-compose.extraction.yml  docker-compose.yml  pyproject.toml  run_all.ps1  run_extraction_service.ps1  test_extraction_service.ps1
.bob/: CUSTOM_MODES_TEMPLATE.md  custom_modes.yaml
.bob/notes/: pending-notes.txt
.bob/rules/: 00-dataset-protection.md  01-contract-discipline.md  02-source-citation.md  03-secrets-management.md  04-taxonomy-consistency.md  05-python-conventions.md
alerting_service/: Dockerfile  README.md  channels.py  config.py  conftest.py  main.py  pyproject.toml  templates.py
alerting_service/tests/: test_channels.py  test_main.py  test_templates.py
assessment_service/: Dockerfile  README.md  config.py  engine.py  main.py  portfolio.py  pyproject.toml
assessment_service/tests/: conftest.py  test_engine.py  test_main.py  test_portfolio.py  test_storage_wiring.py
contracts/: __init__.py  export_schemas.py  finding.schema.json  models.py  pyproject.toml  requirement.schema.json
contracts/fixtures/: findings.sample.json  requirements.sample.json
database/: init.sql
dataset/: dataset_stats.json  partners.csv  partners.json  sample_expected_output.json  taxonomy.json
dataset/feed/: index.html
extraction_service/: Dockerfile  README.md  __init__.py  change.py  clients.py  config.py  database.py  extractor.py  main.py  normalize.py  pyproject.toml  taxonomy.py
extraction_service/tests/: conftest.py  test_api.py  test_change.py  test_clients.py  test_live.py  test_main.py  test_normalize.py  test_storage_wiring.py
openspec/changes/add-postgres-pgvector-storage/: design.md  proposal.md  tasks.md
openspec/changes/add-postgres-pgvector-storage/specs/finding-audit/: spec.md
openspec/changes/add-postgres-pgvector-storage/specs/obligation-store/: spec.md
openspec/changes/add-postgres-pgvector-storage/specs/vector-triage/: spec.md
openspec/changes/build-orchestrator-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/build-orchestrator-pipeline/specs/alert-dispatch-api/: spec.md
openspec/changes/build-orchestrator-pipeline/specs/gap-assessment-api/: spec.md
openspec/changes/build-orchestrator-pipeline/specs/pipeline-orchestration/: spec.md
openspec/changes/implement-extraction-logic/: design.md  proposal.md  tasks.md
openspec/changes/implement-extraction-logic/specs/cellar-discovery/: spec.md
openspec/changes/implement-extraction-logic/specs/cellar-fetch/: spec.md
openspec/changes/implement-extraction-logic/specs/echa-fetch/: spec.md
openspec/changes/implement-extraction-logic/specs/formex-parsing/: spec.md
openspec/changes/implement-extraction-logic/specs/requirement-persistence/: spec.md
openspec/changes/implement-extraction-logic/specs/requirements-api/: spec.md
openspec/changes/implement-extraction-logic/specs/scope-normalization/: spec.md
orchestrator/: pyproject.toml
storage/: __init__.py  alembic.ini  conftest.py  db.py  hashing.py  orm.py  pyproject.toml  repository.py  similarity.py
storage/migrations/: env.py
storage/migrations/versions/: 0001_initial_schema.py
storage/tests/: conftest.py  test_import_graph.py  test_parity.py  test_repository.py  test_wiring_db.py
