[project]
name = "extraction-service"
version = "0.1.0"
description = "Extraction service - Pull live regulatory requirements from EUR-Lex/CELLAR and ECHA"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "defusedxml>=0.7.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "SPARQLWrapper>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
