[project]
name = "extraction-service"
version = "0.1.0"
description = "Extraction service - Pull live regulatory requirements from EUR-Lex/CELLAR and ECHA"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "defusedxml>=0.7.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
]

# Persistence uses the stdlib `sqlite3` driver; CELLAR SPARQL is queried over
# plain httpx (Accept: application/sparql-results+json), so neither sqlalchemy
# nor SPARQLWrapper is required at runtime.

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
