[project]
name = "extraction-service"
version = "0.1.0"
description = "Extraction service - Pull live regulatory requirements from EUR-Lex/CELLAR and ECHA"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

# CELLAR SPARQL is queried over plain httpx (Accept:
# application/sparql-results+json), so SPARQLWrapper is not required.
# When Formex-XML/ECHA parsing lands, add defusedxml + beautifulsoup4 + lxml.

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
